Mobile Layout Bug Fix

--- a/src/components/ContactsSection.css
+++ b/src/components/ContactsSection.css
@@ -1,9 +1,5 @@
 /* Works with your existing .section, .section-title, .section-sub */
 
-.section-head {
-  margin-bottom: 26px;
-  margin-left: 400px;
-}
 
 
 
