--- a/src/components/ProjectsSection.css
+++ b/src/components/ProjectsSection.css
@@ -1,10 +1,3 @@
-.section-head {
-  margin-bottom: 26px;
-  margin-left: 400px;
-}
-
-
-
 .projects-grid {
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -12,9 +5,3 @@
 }
 
 
-@media (max-width: 1100px) {
-  .projects-grid { grid-template-columns: repeat(2, minmax(0, 1fr)); }
-}
-@media (max-width: 720px) {
-  .projects-grid { grid-template-columns: 1fr; }
-}
